<resources>

    <string name="app_name">ArmExercise</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_arm_exercise">ArmExercise</string>
    
    <string name="minus_five">-5</string><string name="minus_ten">-10</string>
    <string name="minus_twelve">-20</string>
    <string name="minus_thirty">-30</string>
    <string name="initiate">초기화</string>
    <string name="ini_number">50</string>

</resources>