<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/ini_number"
        android:textColor="#ddff11"
        android:textSize="100dp"
        tools:context=".ArmExercise" />
    
    <Button
        android:id="@+id/minus_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:layout_marginLeft="32dp"
        android:text="@string/minus_five"
        android:tag="5" />
    
    <Button
        android:id="@+id/minus_ten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/minus_five"
        android:layout_alignBottom="@id/minus_five"
        android:text="@string/minus_ten"
        android:tag="10" />
    
    <Button
        android:id="@+id/minus_twelve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/minus_ten"
        android:layout_alignBottom="@id/minus_ten"
        android:text="@string/minus_twelve"
        android:tag="20" />
    
    <Button
        android:id="@+id/minus_thirty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/minus_twelve"
        android:layout_alignBottom="@id/minus_twelve"
        android:text="@string/minus_thirty"
        android:tag="30" />
    
    <Button
        android:id="@+id/initiate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/initiate"
        android:tag="1" />

</RelativeLayout>
